docs: add §3.8 Concurrency Discipline + Risks #11/#12
§3.8 codifies VT-first as implementation discipline: placement by
layer (@RunOnVirtualThread + newVirtualThreadPerTaskExecutor), spawn
fan-out via StructuredTaskScope (gated on M18 spike, JEP 505 fifth
preview in Java 25), pinning detection, synchronized-forbidden CI
grep, JDBC posture deferred to M5, OTel thread.is_virtual marker.

Risk #11 records the JDBC/SQLite VT pinning symptom (mitigation
chosen at M5). Risk #12 records the Mutiny ↔ VT seam in the Telegram
channel (enforced via maven-enforcer bannedDependencies at M17).

Retires the ~/.claude/plans/forvum-ultraplan.md mirror discipline:
the repo file is now canonical.